--- a/index5.html
+++ b/index5.html
@@ -2,21 +2,20 @@
  <html>
    <head>
      <meta charset="utf-8">
-     <title>Ejercicio 1</title>
+     <title>Ejercicio 2</title>
      <style>
-        .small{
-          font-size: 1.2em
-          }
-          .mini{
-          font-size: 1.0em
-          }
+        .clase1{
+          font-size: 20px;
+      }
+      .clase2{
+           font-size: 1rem;
+        }
      </style>
    </head>
    <body>
-     <div class="small">
+     <div class="clase1">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-
-       <div class="mini">
+       <div class="clase2">
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </div>
      </div>
