--- a/index5.html
+++ b/index5.html
@@ -1,66 +1,53 @@
 <!DOCTYPE html>
- <html>
- <head>
-   <meta charset="utf-8">
-   <style>
-   body{
-     margin:0px;
-     width: 960px;
-     margin: auto;
-     }
-.sidebar{
-     display: table-cell;
-     width: 250px;
-     padding-left: 50px;
-     box-sizing: border-box;
-     background-color:black;
-     color: white;
-    }
-.main{
-    margin-left:250px;
-    padding: 0 50px 0 50px;
-    display: table-cell;
-  }
-  </style>
-</head>
-<body>
-  <div class="sidebar">
-    <h1> lorem </h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp
-or incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
- exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irur
-e dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariat
-ur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun
-t mollit anim id est laborum.</p>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Mock up</title>
+    <style media="screen">
+
+      .titulo {
+        background-color: #00ba00;
+        text-align: center;
+        padding: 70px 0;
+        color: white;
+        font-family: Helvetica;
+        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
+      }
+
+      .row {
+        clear: both;
+        border: 1px solid black;
+        overflow: hidden;
+        border-top: 0;
+      }
+      .cell {
+        float: left;
+        width: 33.3%;
+        padding: 30px;
+        box-sizing: border-box;
+      }
+      .ima {
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+  <div class="titulo">
+    <h1>HOLA !<br /> ESTE ES UN EJERCICIO DE GRILLAS</h1>
   </div>
-  <div class="main">
-    <h1> lorem </h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp
-or incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
- exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irur
-e dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariat
-ur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun
-t mollit anim id est laborum.</p>
-    <h2> lorem </h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp
-or incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
- exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irur
-e dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariat
-ur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun
-t mollit anim id est laborum.</p>
-    <h3> lorem </h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp
-or incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
- exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irur
-e dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariat
-ur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun
-t mollit anim id est laborum.</p>
-    <h4> lorem </h4>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp
-or incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irur
- e dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariat
- ur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun
- t mollit anim id est laborum.</p>
-   </div>
- </body>
- </html>
+  <div class="row">
+  <div class="cell">
+    <img class="ima" src="bot.jpg" alt="hello">
+    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
+  </div>
+  <div class="cell">
+    <img class="ima" src="bot.jpg" alt="hello">
+    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
+  </div>
+  <div class="cell">
+    <img class="ima" src="bot.jpg" alt="hello">
+    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
+  </div>
+
+  </body>
+</html>
