--- a/index5.html
+++ b/index5.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
     <title>Mock up</title>
     <style media="screen">
 
@@ -26,9 +27,19 @@
         padding: 30px;
         box-sizing: border-box;
       }
+
       .ima {
         width: 100%;
       }
+
+      @media (max-width: 480px) {
+        .cell {
+            float: none;
+            width: 100%;
+        }
+      }
+
+
     </style>
   </head>
   <body>
